crazy-donut/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crazy-donut-backend-deployment-production
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: crazy-donut-backend-production
  template:
    metadata:
      labels:
        app: crazy-donut-backend-production
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: crazy-donut-backend-container-production
          image: ghcr.io/kaizerpwn/crazy-donut-backend:b4e939e28470726a1c821b56b6e0c27a554af965
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: registry-1
