crazy-donut/database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-crazy-donut-deployment-production
  namespace: crazy-donut
spec:
  selector:
    matchLabels:
      app: mariadb-crazy-donut-production
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb-crazy-donut-production
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-crazy-donut-storage-production
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-crazy-donut-storage-production
          persistentVolumeClaim:
            claimName: mariadb-crazy-donut-pvc-production
