crazy-donut/backend--service.yml
apiVersion: v1
kind: Service
metadata:
  name: crazy-donut-backend-service-production
spec:
  type: LoadBalancer
  selector:
    app: crazy-donut-backend-production
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
