crazy-donut/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service-crazy-donut-production
  namespace: crazy-donut
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb-crazy-donut-production
  clusterIP: None
