crazy-donut/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: crazy-donut-frontend-service-production
spec:
  type: LoadBalancer
  selector:
    app: crazy-donut-frontend-production
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
